# quantify_bam

./: Cargo.toml  README.md  veloCLP.sbatch  veloProB.sbatch
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: rust.yml
notebooks/: postprocessing_example.ipynb
src/: bam_helper.rs  lib.rs  main.rs  main_logics.rs  mutation_processor.rs  read_data.rs  value.rs
src/gtf/: exon_iterator.rs  gene.rs  gtf.rs  mod.rs  spliced_read.rs
tests/: gtf.rs
tests/data/: Igk.gtf  Untitled.ipynb  subsubset.bam  test.gtf
