[package]
name = "quantify_bam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.14", features = ["derive"] }
indicatif = {version = "*", features = ["rayon"]}
rayon = "1.5"
num_cpus = "1.13"  # Or the latest version
bam = "*"
rustody = { git = "https://github.com/stela2502/Rustody", branch ="main2" }
