[package]
name = "quantify_bam"
version = "0.4.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.14", features = ["derive"] }
flate2 = "*"
indicatif = {version = "*", features = ["rayon"]}
lazy_static = "*"
rayon = "1.5"
num_cpus = "1.13"  # Or the latest version
rust-htslib = "0.49.0"
rustody = { git = "https://github.com/stela2502/Rustody", branch ="main2" }
regex = "1"
